ndb - bug#48700   Make sure that checkScanShrink/expand checks all ongoing scans,     not just the first 4